feat(api): implement signup, login, logout, and token refresh (#8)
* chore: add lombok in gradle setting

* feat(api): implement signup login logout and token refresh
